gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: travelr
  labels:
    app: gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: auth
          image: evilben/travelr_gateway:(hash)
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: travelr
spec:
  selector:
    app: gateway
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  namespace: travelr
spec:
  tls:
    - hosts:
        - "travelr.fluidmedia.wales"
      secretName: gateway-tls
  rules:
    - host: travelr.fluidmedia.wales
      http:
        paths:
          - path: "/graphql"
            backend:
              serviceName: gateway
              servicePort: 80
